--- a/css/styles.css
+++ b/css/styles.css
@@ -1,66 +1,187 @@
-figcaption {
-    text-align: center;
-    caption-side: bottom;
-    color:white
-  }
-
-.conteiner-acordion{
-    flex-wrap: wrap;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 200px;
-
-}
-
-body {
-    background-image: url("../assets/img/black.jpg");
-}
-
 .image {
-        max-width: 500px;
+  max-width: 70%;
+  padding: 50px;
+}
+
+.imagealt {
+  max-width: 50%;
+  display: flex;
+  justify-content: center;
+  padding: 50px;
+}
+
+.personajes {
+  max-width: 200px;
+  max-height: 200px;
+}
+
+.icon {
+  max-width: 3%;
+  max-height: 3%;
+}
+
+.collage > img {
+  width: 500px;
+  height: 500px;
+  object-fit: cover;
+}
+
+.imagenarticle {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.img__wrap:hover .img__description {
+  visibility: visible;
+  opacity: 1;
+}
+
+figcaption {
+  text-align: center;
+  caption-side: bottom;
+  color: white;
+}
+
+.fuente {
+  color: white;
+}
+
+.strong {
+  display: flex;
+  justify-content: center;
+  color: white;
+  font-weight: bold;
+}
+
+.background {
+  color: aliceblue;
+  background-color: rgb(65, 30, 11);
+  width: 100%;
+  margin: 20px auto;
+}
+
+.img__description {
+  font-weight: bold;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  color: #ffffff;
+  visibility: hidden;
+  opacity: 0;
+  /* transition effect. not necessary */
+  transition: opacity 0.2s, visibility 0.2s;
+}
+
+.titulo {
+  color: #ffffff;
+}
+
+.conteiner-acordion {
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 200px;
+}
+
+.conteinerindex {
+  margin-bottom: 30px;
 }
 
 .menu-container {
-    margin-left: 2000px;
-  }
-
-.fuente {
-    color:white;
-    
+  margin-left: 2000px;
 }
 
-.strong{
-    display: flex;
-    justify-content: center;
-    color:white;
-    font-weight: bold;
+.conteiner1 {
+  margin: 200px -300px 200px 0;
 }
 
-.icon{
-    max-width: 200px;
-    max-height:200px;
+body {
+  background-image: url("../assets/img/1210148-botw-The-Legend-of-Zelda-Breath-of-the-Wild-Zelda.jpg");
 }
-
 
 iframe {
-    display: block;
-    margin: 0 auto;
-    max-width: 100%;
-    }
-
-
-.collage > img{
-    width:  500px;
-    height: 500px;
-    object-fit: cover;
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
 }
 
-.col{
-    overflow: hidden;
+.testa {
+  display: flex;
+  width: 100%;
+  height: 430px;
 }
 
-.conteiner1{
-    margin: 200px -300px 200px 0;
-
+.testa img {
+  width: 0px;
+  flex-grow: 1;
+  object-fit: cover;
+  opacity: 8;
+  transition: 0.5s ease;
 }
+
+.testa img:hover {
+  cursor: crosshair;
+  width: 300px;
+  opacity: 1;
+  filter: contrast(120%);
+}
+
+article {
+  position: relative;
+  width: 250px;
+  transition: all 0.3s ease;
+}
+
+article img:first-child {
+  box-shadow: 0 60px 60px -60px rgba(255, 153, 0, 0.5);
+  border-radius: 4px;
+  object-fit: cover;
+  width: 100%;
+}
+
+article img:last-child {
+  position: absolute;
+  width: 200px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  transform: translateY(25%);
+  transition: 0.3s ease;
+  opacity: 0;
+}
+
+article:hover {
+  transform: perspective(250px) rotateX(10deg) translateY(-5%) translateZ(0);
+}
+
+article::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+  background-image: linear-gradient(to bottom, transparent 10%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0.5) 95%);
+  opacity: 0;
+  transition: all 0.3s ease;
+}
+
+article:hover::before {
+  opacity: 1;
+}
+
+article:hover img:last-child {
+  opacity: 1;
+  transform: translateY(10%);
+}
+
+section .prueba {
+  display: flex;
+  width: 100%;
+  max-width: 1300px;
+}
+
+/*# sourceMappingURL=styles.css.map */
